blog: mobile layout issues

--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -593,19 +593,21 @@ table.table-excel {
   display: block;
   width: auto;
   overflow: hidden;
-  margin-top: -20px;
+  margin: -20px 10px 10px;
+
+  a {
+    display: block;
+    width: 50%;
+    float: left;
+    margin: 1em 0;
+  }
+
+  .next {
+    text-align: right;
+  }
 }
 
-.PageNavigation a {
-  display: block;
-  width: 50%;
-  float: left;
-  margin: 1em 0;
-}
 
-.PageNavigation .next {
-  text-align: right;
-}
 
 
 
